- Fixed bug #35243 (php_mblen() crashes when compiled with thread-safety on Linux)